fix MOFAtools broken links

--- a/MOFA/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFA/vignettes/MOFA_example_CLL.Rmd
@@ -15,7 +15,7 @@ This vignette show how to use MOFA including initialization, training and down-s
 For illustration we use the CLL data which is used in the MOFA publication.
 
 ```{r, warning=FALSE, message=FALSE}
-library(MOFAtools)
+library(MOFA)
 library(MOFAdata)
 ```
 
