--- a/vignettes/MOFA_example_CLL.Rmd
+++ b/vignettes/MOFA_example_CLL.Rmd
@@ -34,7 +34,7 @@ MOFAobject
 
 ## Option 2: bioconductor approach
 If using the Bioconductor approach, you need to provide or create a [MultiAssayExperiment](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html) object and then use it to build the MOFA object. For example, starting from a list of matrices where features are rows and samples are columns, this can be easily constructed as follows:
-```{r}
+```{r, warning=FALSE, message=FALSE}
 library(MultiAssayExperiment)
 
 # Load data
