--- a/vignettes/MOFA_example_CLL.Rmd
+++ b/vignettes/MOFA_example_CLL.Rmd
@@ -15,6 +15,7 @@ This vignette show how to use MOFA including initialization, training and down-s
 For illustration we use the CLL data which is used in the MOFA publication.
 
 ```{r, warning=FALSE, message=FALSE}
+library(MultiAssayExperiment)
 library(MOFA)
 library(MOFAdata)
 ```
@@ -35,7 +36,6 @@ MOFAobject
 ## Option 2: bioconductor approach
 If using the Bioconductor approach, you need to provide or create a [MultiAssayExperiment](https://bioconductor.org/packages/release/bioc/html/MultiAssayExperiment.html) object and then use it to build the MOFA object. For example, starting from a list of matrices where features are rows and samples are columns, this can be easily constructed as follows:
 ```{r, warning=FALSE, message=FALSE}
-library(MultiAssayExperiment)
 
 # Load data
 # import list with mRNA, Methylation, Drug Response and Mutation data. 
@@ -128,6 +128,16 @@ MOFAobject <- prepareMOFA(
   ModelOptions = ModelOptions,
   TrainOptions = TrainOptions
 )
+```
+
+Optionally, we can choose to regress out some (technical) covariates before training, using a simple linear model. For example, here we can choose to remove the effect of sex. Ideally, all undesired sources of variation should be removed a priori from the model. The reason ebing that, if strong technical factors exist, the model will "focus" on capturing the variability driven by the technical factors, and small sources of biological variability could be missed.  
+(Note: uncomment and running the function below will lead to a slight modification of the results)
+```{r}
+# MOFAobject <- regressCovariate(
+#   object = MOFAobject,
+#   views = c("Drugs","Methylation","mRNA"),
+#   covariates = MOFAobject@InputData$Gender
+# )
 ```
 
 ## Run MOFA
